# Haskell_2023

./: README.md
bank_api/: CHANGELOG.md  bank-api.cabal
bank_api/app/: API.hs  Main.hs  Server.hs
p0/: p0.cabal
p0/src/: MyLib.hs
p0/test/: Main.hs
p1/: p1.cabal
p1/test/: Main.hs
p2/: p2.cabal
p2/app/: Main.hs
p2/test/: Main.hs
p3/: p3.cabal
p3/test/: Main.hs
p4/: p4.cabal
