cabal-version:      3.0
name:               bank-api
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             s.khasanov
maintainer:         s.khasanov

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable bank-api
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >=4.14 && <4.16,
        servant,
        servant-server,
        stm

    hs-source-dirs:   app
    default-language: Haskell2010
